==> apache/nuttx/arch/renesas/src/rx65n/rx65n_serial.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <unistd.h>
#include <semaphore.h>
#include <string.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <stdio.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/serial/serial.h>
#include "rx65n_macrodriver.h"
#include "arch/rx65n/iodefine.h"
#include "chip.h"
#include "up_arch.h"
#include "up_internal.h"
#include "rx65n_definitions.h"
#include "rx65n_sci.h"
#include "arch/rx65n/irq.h"
#  define TTYS0_DEV     g_sci0port       /* SCI0 is tty0 */
#  define TTYS1_DEV     g_sci1port       /* SCI1 is tty1 */
#  define TTYS2_DEV     g_sci2port       /* SCI2 is tty2 */
#  define TTYS3_DEV     g_sci3port       /* SCI3 is tty3 */
#  define TTYS4_DEV     g_sci4port       /* SCI4 is tty4 */
#  define TTYS5_DEV     g_sci5port       /* SCI5 is tty5 */
#  define TTYS6_DEV     g_sci6port       /* SCI6 is tty6 */
#  define TTYS7_DEV     g_sci7port       /* SCI7 is tty7 */
#  define TTYS8_DEV     g_sci8port       /* SCI8 is tty8 */
#  define TTYS9_DEV     g_sci9port       /* SCI9 is tty9 */
#  define TTYS10_DEV    g_sci10port      /* SCI10 is tty10 */
#  define TTYS11_DEV    g_sci11port      /* SCI11 is tty11 */
#  define TTYS12_DEV    g_sci12port      /* SCI12 is tty12 */
#  define       HAVE_CONSOLE
#  define       CONSOLE_DEV             g_sci0port /* SCI0 is console */
#  define       HAVE_CONSOLE

static int up_setup(struct uart_dev_s *dev)
{
#ifndef CONFIG_SUPPRESS_SCI_CONFIG
  struct up_dev_s         *priv;
  uint8_t         smr;

  priv = (struct up_dev_s *)dev->priv;

  /* Disable the transmitter and receiver */

  priv->scr  = up_serialin(priv, RX_SCI_SCR_OFFSET);
  priv->scr &= ~(RX_SCISCR_TE | RX_SCISCR_RE);
  priv->scr &= ~RX_SCISCR_CKEMASK;
  up_serialout(priv, RX_SCI_SCR_OFFSET, priv->scr);

  /* Set communication to be asynchronous with the configured number of data
   * bits, parity, and stop bits.  Use the internal clock (undivided)
   */

  smr = 0;
  if (7 == priv->bits)
    {
      smr |= RX_SCISMR_CHR;
    }

  if (1 == priv->parity)
    {
      smr |= (RX_SCISMR_PE | RX_SCISMR_OE);
    }
  else if(2 == priv->parity)
    {
      smr |= RX_SCISMR_PE;
    }

  if (priv->stopbits2)
    {
      smr |= RX_SCISMR_STOP;
    }

  up_serialout(priv, RX_SCI_SMR_OFFSET, smr);

  /* Set the baud based on the configured console baud and configured
   * system clock.
   */

  up_setbrr(priv, priv->baud);

  /* Then enable the transmitter and receiver */

  priv->scr |= (RX_SCISCR_TE | RX_SCISCR_RE);
  up_serialout(priv, RX_SCI_SCR_OFFSET, priv->scr);
#endif
  return OK;
}

static void up_shutdown(struct uart_dev_s *dev)
{
  struct up_dev_s *priv;

  priv = (struct up_dev_s *)dev->priv;
  up_disablesciint(priv, NULL);
  priv->scr  = up_serialin(priv, RX_SCI_SCR_OFFSET);
  priv->scr &= ~(RX_SCISCR_TE | RX_SCISCR_RE);
  up_serialout(priv, RX_SCI_SCR_OFFSET, priv->scr);
}

static int up_receive(struct uart_dev_s *dev, unsigned int *status)
{
  struct up_dev_s *priv;
  uint8_t rdr;
  uint8_t ssr;
  priv = (struct up_dev_s *)dev->priv;

  /* Read the character from the RDR port */

  rdr  = up_serialin(priv, RX_SCI_RDR_OFFSET);

  /* Clear all read related status in  real ssr (so that when when
   * rx available is called again, it will return false.
   */

  ssr = up_serialin(priv, RX_SCI_SSR_OFFSET);
  ssr &= ~(RX_SCISSR_RDRF | RX_SCISSR_ORER |
           RX_SCISSR_FER  | RX_SCISSR_PER) ;
  up_serialout(priv, RX_SCI_SSR_OFFSET, ssr);

  /* For status, return SSR at the time that the interrupt was received */

  *status = (uint32_t)priv->ssr << 8 | rdr;

  /* Return the received character */

  return (int)rdr;
}

static void up_rxint(struct uart_dev_s *dev, bool enable)
{
  struct up_dev_s *priv;
  irqstate_t flags;
  priv = (struct up_dev_s *)dev->priv;

  /* Disable interrupts to prevent asynchronous accesses */

  flags = enter_critical_section();

  /* Are we enabling or disabling? */

  if (enable)
    {
      /* Enable the RDR full interrupt */

     priv->scr |= RX_SCISCR_RIE;
#ifndef CONFIG_SUPPRESS_SERIAL_INTS
         up_enable_irq(priv->recvirq);
#endif
    }
  else
    {
      /* Disable the RDR full interrupt */

     priv->scr &= ~RX_SCISCR_RIE;
     up_disable_irq(priv->recvirq);
    }

  /* Write the modified SCR value to hardware */

  up_serialout(priv, RX_SCI_SCR_OFFSET, priv->scr);
  leave_critical_section(flags);
}

static bool up_rxavailable(struct uart_dev_s *dev)
{
  struct up_dev_s *priv;

  /* Return true if the RDR full bit is set in the SSR */

  priv = (struct up_dev_s *)dev->priv;
  return (0 != (up_serialin(priv, RX_SCI_SSR_OFFSET) & RX_SCISSR_RDRF));
}

static void up_send(struct uart_dev_s *dev, int ch)
{
  struct up_dev_s  *priv;
  uint8_t ssr;
  priv = (struct up_dev_s *)dev->priv;

  /* Write the data to the TDR */

  up_serialout(priv, RX_SCI_TDR_OFFSET, (uint8_t)ch);

  /* Clear the TDRE bit in the SSR */

  ssr  = up_serialin(priv, RX_SCI_SSR_OFFSET);
  ssr &= ~(RX_SCISSR_TDRE | RX_SCISSR_TEND | RX_SCISSR_MPBT);
  up_serialout(priv, RX_SCI_SSR_OFFSET, ssr);
}

static void up_txint(struct uart_dev_s *dev, bool enable)
{
  struct up_dev_s *priv;
  irqstate_t      flags;
  priv = (struct up_dev_s *)dev->priv;

  /* Disable interrupts to prevent asynchronous accesses */

  flags = enter_critical_section();

  /* Are we enabling or disabling? */

  if (enable)
    {
      /* Enable the TDR empty interrupt */

#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      up_enable_irq(priv->xmitirq);
#endif

      priv->scr |= RX_SCISCR_TIE;

      /* If the TDR is already empty, then don't wait for the interrupt */

      if (up_txready(dev))
        {
          /* Tx data register empty ... process outgoing bytes.  Note:
           * this could call up_txint to be called recursively.  However,
           * in this event, priv->scr should hold the correct value upon
           * return from uuart_xmitchars().
           */

          uart_xmitchars(dev);
        }
    }
  else
    {
      /* Disable the TDR empty interrupt */

      up_disable_irq(priv->xmitirq);
    }

  /* Write the modified SCR value to hardware */

  up_serialout(priv, RX_SCI_SCR_OFFSET, priv->scr);
  leave_critical_section(flags);
}

static bool up_txready(struct uart_dev_s *dev)
{
  struct up_dev_s *priv;
  priv = (struct up_dev_s *)dev->priv;
  return (0 != (up_serialin(priv, RX_SCI_SSR_OFFSET) & RX_SCISSR_TDRE));
}

int up_putc(int ch)
{
#ifdef HAVE_CONSOLE
  struct up_dev_s *priv;
  uint8_t  scr;
  priv = (struct up_dev_s *)CONSOLE_DEV.priv;
  up_disablesciint(priv, &scr);

  /* Check for LF */

  if (ch == '\n')
    {
      /* Add CR */

      up_waittxready(priv);
      up_serialout(priv, RX_SCI_TDR_OFFSET, '\r');
    }

  up_waittxready(priv);
  up_serialout(priv, RX_SCI_TDR_OFFSET, (uint8_t)ch);
  up_waittxready(priv);
  up_restoresciint(priv, scr);
#endif
  return ch;
}

int up_putc(int ch)
{
#ifdef HAVE_CONSOLE

  /* Check for LF */

  if (ch == '\n')
    {
      /* Add CR */

      up_lowputc('\r');
    }

  up_lowputc(ch);
#endif
  return ch;
}
